# Chiheisen

./: CMakeLists.txt  README.md
include/: HelpDoc.h  SoftwareString.h
src/: CHSBotMsg.cpp  CHSCommandJudge.cpp  CHSDebug.cpp  CHSHelpDoc.cpp  Chiheisen.cpp
